--- a/index.html
+++ b/index.html
@@ -22,12 +22,27 @@
         <section id="teams">
             <h3>
                 Teams 
-                <button class="btn mini-title">
+                <button id="btnNovoTeam" class="btn mini-title">
                     <box-icon name='plus'></box-icon> Novo Team
                 </button>
             </h3>
+            <ul id="listaDeTeams"></ul>
         </section>
     </main>
+
+    <section id="overlay"></section>
+    <section id="formCriar" class="modal">
+        <form id="fc" onsubmit="adicionarTeam()">
+            <h3>Criar <box-icon id="fecharFormCriar" name='x'></box-icon></h3>
+            <label class="mini-title" for="teamNome">Nome</label>
+            <input type="text" id="teamNome" placeholder="Digite o nome do team" required>
+            <label class="mini-title" for="teamQtd">Nº de participantes</label>
+            <input type="number" id="teamQtd" min="0" required>
+            <button type="submit" class="btn form mini-title">
+                salvar
+            </button>
+        </form>
+    </section>
 
     
     <script src="https://unpkg.com/boxicons@2.1.4/dist/boxicons.js"></script>
