aula do dia 15/07

--- a/index.html
+++ b/index.html
@@ -44,7 +44,25 @@
         </form>
     </section>
 
-    
+    <section id="mostrarParticipantes" class="modal">
+        <h3>Participantes <box-icon name="x" id="fecharParticipantes"></box-icon></h3>
+        <ul id="listaDeParticipantes">
+            
+        </ul>
+    </section>
+
+    <section id="criarPaticipante" class="modal">
+        <h3>Adicionar Participantes <box-icon id="fecharFormParticipantes" name="x"></box-icon></h3>
+        <form onsubmit="adicionarParticipante()">
+            <input type="hidden" id="teamId">
+            <label class="mini-title" for="participanteNome">Nome</label>
+            <input type="text" id="participanteNome" placeholder="Digite o nome do participante" required>
+            <button type="submit" class="btn form mini-title">
+                salvar
+            </button>
+        </form>
+    </section>
+
     <script src="https://unpkg.com/boxicons@2.1.4/dist/boxicons.js"></script>
     <script src="js/scripts.js"></script>
 </body>
